--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,6 @@
 ### custom ignores ###
-.session
-.session-journal
+*.session
+*.session-journal
 
 # Created by https://www.gitignore.io/api/python
 
